@@ -18,6 +18,7 @@ var Thoth = function () {
   var js = {
     thoth: {
       comments   : '/js/admin/comments.js',
+      name       : '/js/admin/name.js',
       tagcomplete: '/js/admin/tagcomplete.js'
     },
     yui: {
@@ -147,9 +148,15 @@ var Thoth = function () {
       if (admin) {
         token = formToken;
 
+        // Load the Name module if this page contains one or more name input
+        // elements.
+        if (yud.get('page-form') || yud.get('post-form')) {
+          LazyLoad.loadOnce([js.yui.conn_json, js.thoth.name]);
+        }
+
         // Load the TagComplete module if this page contains one or more tag
         // input elements.
-        if (yud.getElementsByClassName('tags-input', 'input').length) {
+        if (yud.get('post-form')) {
           LazyLoad.loadOnce([js.yui.conn_json, js.thoth.tagcomplete]);
         }
 
